<resources>
    <string name="app_name">AndroidApp</string>

    <string name="drawer_open">Demo</string>
    <string name="drawer_close">Menu</string>

    <string name="view_animation">View Animation</string>
    <string name="mvp_demo">MVP Demo</string>

    <string name="alpha">透明</string>
    <string name="rotate">旋转</string>
    <string name="translate">位移</string>
    <string name="scale">缩放</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="login_success">恭喜你，登陆成功！</string>
    <string name="login_fail">密码或用户名不正确</string>
    <string name="username_not_exist">该用户名不存在</string>

    <string name="load_more">正在加载更多...</string>

    <string name="name">应用名 ： </string>
    <string name="version_name">版本名 ： </string>
    <string name="version_code">版本号 ： </string>
    <string name="install_time">安装时间 ： </string>
    <string name="last_update_time">更新时间 ： </string>
    <string name="code_size">应用大小 ： </string>
    <string name="cache_size">缓存大小 ： </string>
    <string name="data_size">数据大小 ： </string>
    <string name="install_location">安装位置 ： </string>
    <string name="uninstall">卸载</string>
</resources>
